chore: update user-management sdk version to 0.5.3
* chore: refactor usage of auth token
* chore: remove temporary and external from MemberDto